--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Shuhel - Billal k?</title>
+    <title>Web-portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -13,10 +13,11 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="orange-highlight">Shohel Rana's</span> World</h1>
-            <h3>Student | Cannabis Smoker | Luiccha pro max pro ++ </h3>
-            <p class="margin-20">I like to gather knowledge, take Cannabis and keep my all wife's more happier. I am that kind of person who notices everything but, stays quite.... 🙂🙂 :p</p>
-            <a class="link-button" target="_blank" href="https://web.facebook.com/profile.php?id=100011743989036">FIND ME</a>
+            <h1><span class="orange-highlight">Fozlol Hoq's's</span> World</h1>
+            <h3>Muslim | Student | World-class professional web dev </h3>
+            <p class="margin-20">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+            </p>
+            <a class="link-button" target="_blank" href="#">FIND ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="">
@@ -28,24 +29,25 @@
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h3>Become a no.1 Cannabis Smoker</h3>
-            <p class="margin-20">cannabis is the greatest medication ever, and harmless. So i invite people to eat cannabis. It help's us lose weight</p>
-            <a class="link-button" href="https://www.healtheuropa.eu/health-benefits-of-cannabis/92499/">See more...</a>
+            <h3>Become World's No. 1 Developer</h3>
+            <p class="margin-20">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" href="https://www.hackerrank.com/haqueakmfazlul01?hr_r=1">See more...</a>
         </div>
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
         <div id="full-stack" class="half-width single-experience">
-            <h2>Full Stack Cannabis Smoker</h2>
-            <p class="orange-highlight">2020-present | Pro Level Cannabis Smoker</p>
-            <p>I am master of cannabis smoking. I know everything that is needed to make a person cannabis smoker forcefully. I didn't stop with smoking cannabis. I can hurt people by telling "Gali". I like to give Trouble to my family and friends by telling lie and smoking cannabis in front of them.</p>
+            <h2>Full Stack Web Dev</h2>
+            <p class="orange-highlight">2021 - Present | Pro level Web Dev</p>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
         <div id="baby-web" class="half-width single-experience">
-            <h2>Baby Cannabis Smoker</h2>
-            <p class="orange-highlight">2019-2020 | Cannabis Smoke Learner</p>
-            <p>I learned how to tell smoke cannabis during this time. After learning it I troubled my friends for many time. I have insulted my friends at random for many times without any reason. Because, they didn't start smoking</p>
+            <h2>Baby Web Developer</h2>
+            <p class="orange-highlight">2020-2021 | Programming Hero Learner</p>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
-    <footer>@ Shohel Rana</footer>
+    <footer>@ A.K.M Fozlol Hoq</footer>
 </body>
 </html>
