updated name spelling(corected)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="orange-highlight">Fozlol Hoq's's</span> World</h1>
+            <h1><span class="orange-highlight">Fozlol Hoq's</span> World</h1>
             <h3>Muslim | Student | World-class professional web dev </h3>
             <p class="margin-20">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
             </p>
