--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/profile2.png" alt="">
+            <img src="./images/profile2.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
